--- a/notebooks/Lagrange2.ipynb
+++ b/notebooks/Lagrange2.ipynb
@@ -105,6 +105,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7b1ec97",
+   "metadata": {},
+   "source": [
+    "The acceleration seen from reference frame that is rotating with angular velocity w is:\n",
+    "\n",
+    "$\\vec{a'}=-2\\vec{\\omega} \\times \\vec{v'} - \\vec{\\omega} \\times (\\vec{\\omega} \\times\\vec{r}) - \\frac{\\mu_{1}\\vec{r_{13}}}{|\\vec{r_{13}}|^3} - \\frac{\\mu_{2}\\vec{r_{23}}}{|\\vec{r_{23}}|^3} $\n",
+    "\n",
+    "The dimension-less version is:\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "79a3754e",
@@ -4964,26 +4977,6 @@
     "tf = 27.3 * 24 * 3600 #  1 month\n",
     "Y0 = np.concatenate((r1, r2, r3, v1, v2, v3))\n",
     "\n",
-    "def nonrotating_dfdt(t, Y, G, m1, m2):\n",
-    "    x1 = Y[0:2]\n",
-    "    x2 = Y[2:4]\n",
-    "    x3 = Y[4:6]\n",
-    "    \n",
-    "    v1 = Y[6:8]\n",
-    "    v2 = Y[8:10]\n",
-    "    v3 = Y[10:12]\n",
-    "    \n",
-    "    r12__3 = np.linalg.norm(x1-x2)**3\n",
-    "    r23__3 = np.linalg.norm(x2-x3)**3\n",
-    "    r13__3 = np.linalg.norm(x1-x3)**3\n",
-    "    \n",
-    "    a1 = G*((m2*(x2-x1)/r12__3))\n",
-    "    a2 = G*((m1*(x1-x2)/r12__3))\n",
-    "    a3 = G*((m1*(x1-x3)/r13__3) + (m2*(x2-x3)/r23__3))\n",
-    "    #print (G*(m1*(x1-x3)/r13__3), G*(m2*(x2-x3)/r23__3), a3)\n",
-    "    result = np.concatenate((v1,v2,v3,a1,a2,a3))\n",
-    "    return result\n",
-    "    \n",
     "sol = solve_ivp(nonrotating_dfdt, (t0, tf), Y0, args=(G,m1,m2), t_eval=None, rtol = 1e-10)   \n",
     "orbs={}\n",
     "orbs['m1'] = sol.y[:2,:].T\n",
