--- a/notebooks/Three_Bodies.ipynb
+++ b/notebooks/Three_Bodies.ipynb
@@ -2649,8 +2649,7 @@
     "\n",
     "# With respect m1\n",
     "\n",
-    "orbs['m2'] =  orbs['m2']  - orbs['m1'] \n",
-    "orbs['G']  =  orbs['G']  - orbs['m1']\n",
+    "dSdt_dimensional\n",
     "orbs.pop('m1','')\n",
     "\n",
     "\n",
